--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,29 +1,29 @@
-# name: Deploy
+name: Deploy
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest #this is github's ubuntu machine
+jobs:
+  deploy:
+    runs-on: ubuntu-latest #this is github's ubuntu machine
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-#         #the uses: actions/checkout@v2 step is used to check out the code from your repository,
-#         #which makes this repository's contents available to the runner(github's ubuntu machine) for the duration of the workflow run.
-#         #This allows you to work with files and scripts that are part of your repository in your workflow.
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        #the uses: actions/checkout@v2 step is used to check out the code from your repository,
+        #which makes this repository's contents available to the runner(github's ubuntu machine) for the duration of the workflow run.
+        #This allows you to work with files and scripts that are part of your repository in your workflow.
 
-#       - name: SSH and deploy
-#         env:
-#           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-#         run:
-#           | #this will run on github's ubuntu machine, the machine has access to this entire repo because of checkout@v2
-#           echo "$SSH_PRIVATE_KEY" > keyfile
-#           chmod 600 keyfile
-#           mkdir -p ~/.ssh
-#           ssh-keyscan ec2-13-48-130-47.eu-north-1.compute.amazonaws.com >> known_hosts
-#           cp known_hosts ~/.ssh/known_hosts 
-#           ssh -t -i keyfile ubuntu@ec2-13-48-130-47.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
+      - name: SSH and deploy
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run:
+          | #this will run on github's ubuntu machine, the machine has access to this entire repo because of checkout@v2
+          echo "$SSH_PRIVATE_KEY" > keyfile
+          chmod 600 keyfile
+          mkdir -p ~/.ssh
+          ssh-keyscan ec2-13-48-130-47.eu-north-1.compute.amazonaws.com >> known_hosts
+          cp known_hosts ~/.ssh/known_hosts 
+          ssh -t -i keyfile ubuntu@ec2-13-48-130-47.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
